--- a/MovieApp.MvcWebUI.csproj
+++ b/MovieApp.MvcWebUI.csproj
@@ -9,7 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="4.0.0-alpha2" />
+    <PackageReference Include="Bootstrap.Datepicker" Version="1.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.4" />
   </ItemGroup>
 
 </Project>
